--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -13,9 +13,10 @@ background-size: cover; ">
             <div class="form-group mb-4">
                <div class="input-group">     
                  <mat-form-field >
-                   <input type="text" matInput  formControlName="firstname" />
-                   <mat-error *ngIf="registerForm.controls['firstname'].hasError('required')">
-                     First Name is <strong>required</strong>
+                  <mat-label>fullname</mat-label>
+                   <input type="text" matInput  formControlName="fullname" placeholder="fullname"/>
+                   <mat-error *ngIf="registerForm.controls['fullname'].hasError('required')">
+                     Full Name Name is <strong>required</strong>
                    </mat-error>
                  </mat-form-field>
                </div>
@@ -24,9 +25,10 @@ background-size: cover; ">
              <div class="form-group mb-4">
                <div class="input-group">
                  <mat-form-field>
-                   <input type="text" matInput  formControlName="lastname" />
-                   <mat-error *ngIf="registerForm.controls['lastname'].hasError('required')">
-                     Last Name is <strong>required</strong>
+                  <mat-label>phonenumber</mat-label>
+                   <input type="number" matInput  formControlName="phonenumber" placeholder="phonenumber"/>
+                   <mat-error *ngIf="registerForm.controls['phonenumber'].hasError('required')">
+                    phonenumber is <strong>required</strong>
                    </mat-error>
                  </mat-form-field>
                </div>
@@ -35,8 +37,9 @@ background-size: cover; ">
 
                <div class="form-group mb-4">
                   <div class="input-group">
-                 <mat-form-field  >
-               <input type="text" matInput name="username" formControlName="username" />
+                 <mat-form-field >
+                  <mat-label>username</mat-label>
+               <input type="text" matInput  formControlName="username" placeholder="username"/>
                <mat-error *ngIf="registerForm.controls['username'].hasError('required') ">
                   username is <strong>required</strong>
                </mat-error>
@@ -51,12 +54,10 @@ background-size: cover; ">
                   <div class="form-group mb-4">
                       <div class="input-group">
              <mat-form-field  >
-               <input matInput type="password" name="password" formControlName="password" />
-               <mat-error *ngIf="registerForm.controls['password'].hasError('minlength')">
-                 Please enter a strong password
-               </mat-error>
-               <mat-error *ngIf="registerForm.controls['password'].hasError('required')">
-                 password is <strong>required</strong>
+              <mat-label>number of vaccine</mat-label>
+               <input matInput type="number" placeholder="numberofvaccines" formControlName="numberofvaccines" />
+               <mat-error *ngIf="registerForm.controls['numberofvaccines'].hasError('required')">
+                numberofvaccines is <strong>required</strong>
                </mat-error>
              </mat-form-field>
            </div>
@@ -66,23 +67,61 @@ background-size: cover; ">
 
                <div class="form-group mb-4">
                    <div class="input-group">
-                     
-             <mat-form-field  >
-               <input matInput type="password" name="password" formControlName="confirmPassword"
-                 (change)="matchError()"/>
-               <mat-error *ngIf="registerForm.controls['confirmPassword'].hasError('minlength')">
-                 Please enter a strong password
-               </mat-error>
-               <mat-error *ngIf="registerForm.controls['confirmPassword'].hasError('required')">
-                 password is <strong>required</strong>
-               </mat-error>
-               <mat-error *ngIf="registerForm.controls['confirmPassword'].hasError('mismatch')">
-                 confirmPassword must match with password
-               </mat-error>
-             </mat-form-field>
+                     <mat-label>Image</mat-label>
+               <input  type="file" #file (change)="uploadImage(file.files)"/>
            </div>
                </div>
                
+               <div class="form-group">
+                <div class="form-group mb-4">
+                    <div class="input-group">
+           <mat-form-field  >
+            <mat-label>Email</mat-label>
+             <input matInput type="email" placeholder="Email" formControlName="Email" />
+             <mat-error *ngIf="registerForm.controls['Email'].hasError('required')">
+              Email is <strong>required</strong>
+             </mat-error>
+
+             <mat-error *ngIf="registerForm.controls['Email'].hasError('email')">
+              Should Enter Strong Email 
+             </mat-error>
+           </mat-form-field>
+         </div>
+                </div>
+             </div>
+
+             <div class="form-group">
+              <div class="form-group mb-4">
+                  <div class="input-group">
+         <mat-form-field  >
+          <mat-label>password</mat-label>
+           <input matInput type="password" placeholder="password" formControlName="password" />
+           <mat-error *ngIf="registerForm.controls['password'].hasError('required')">
+            password is <strong>required</strong>
+           </mat-error>
+
+           <mat-error *ngIf="registerForm.controls['password'].hasError('minlength')">
+            Should password Strong 
+           </mat-error>
+         </mat-form-field>
+       </div>
+              </div>
+           </div>
+           <div class="form-group">
+            <div class="form-group mb-4">
+                <div class="input-group">
+       <mat-form-field >
+        <mat-label>Age</mat-label>
+         <input matInput type="number" placeholder="age" formControlName="age" />
+         <mat-error *ngIf="registerForm.controls['age'].hasError('required')">
+          age is <strong>required</strong>
+         </mat-error>
+       </mat-form-field>
+     </div>
+            </div>
+         </div>
+
+           
  
             
            
