google maps and paypal

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,7 +4,6 @@
     <div id="overlayer"></div>
     <div class="loader">
       <div class="spinner-border text-primary" role="status">
-        <span class="sr-only">Loading...</span>
       </div>
     </div>
   
@@ -34,14 +33,13 @@
               <nav class="site-navigation position-relative text-right" role="navigation">
   
                 <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                  <li><a href="index.html" class="nav-link">Home</a></li>
-                  <li><a routerLink="/prevention"  class="nav-link">Prevention</a></li>
-                  <li><a routerLink="/symptoms"  class="nav-link">Symptoms</a></li>
-                  <li><a routerLink='/about' class="nav-link">About</a></li>
+                  <li><a href="" class="nav-link">Home</a></li>
+                  <li><a href="/prevention"  class="nav-link">Prevention</a></li>
+                  <li><a href="/symptoms" class="nav-link">Symptoms</a></li>
+                  <li><a href="/about" class="nav-link">About</a></li>
   
   
-                  <li><a href="blog.html" class="nav-link">Blog</a></li>
-                  <li><a href="contact.html" class="nav-link">Contact</a></li>
+                  <li><a href="/centers" class="nav-link">centers</a></li>
                 </ul>
               </nav>
             </div>
