--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-
+<app-header></app-header>
     <div class="hero-v1" *ngFor="let obj of home.allAbout">
         <div class="container">
           <div class="row align-items-center">
@@ -189,4 +189,5 @@
         </div>
       </div>
   
-  
+      <app-footer></app-footer>
+
