--- a/src/app/symptoms/symptoms.component.html
+++ b/src/app/symptoms/symptoms.component.html
@@ -1,4 +1,4 @@
-
+<app-header></app-header>
     <div class="hero-v1">
         <div class="container">
           <div class="row align-items-center">
