--- a/src/app/doctor/accept/accept.component.html
+++ b/src/app/doctor/accept/accept.component.html
@@ -1,10 +1,10 @@
 
 <app-sidebar></app-sidebar>
-
+<!-- 
 <div class="pcoded-main-container">
     <div class="pcoded-wrapper">
         <div class="pcoded-content">
-            <div class="pcoded-inner-content">
+            <div class="pcoded-inner-content"> -->
 
                  
 <!-- <button (click)="opendialog()">Create New</button> -->
@@ -16,7 +16,7 @@
 <button type="submit"  class="btn btn-success"
  (click)="Search()">Search</button>
 </form> -->
-
+<!-- 
 
 <table  class="table table-striped">
     <thead>
@@ -56,7 +56,7 @@
         <td>
          <button (click)="openUpdateDailog(obj.userid,obj.reserveid,obj.status,obj.massage,obj.actualdatedose1,obj.actualdatedose2
          )">Update</button> 
-         <!-- <button (click)="openDeleteDailog(obj.userid)">Delete</button>   -->
+         
 
         </td>
 
@@ -65,6 +65,146 @@
       
     </tbody>
   </table>
+ -->
+
+
+<div class="card border-0 shadow mb-4">
+  <div class="card-body">
+      <div class="table-responsive">
+        <table class="table table-centered table-nowrap mb-0 rounded">
+            <thead class="thead-light">
+              <tr>
+                  
+                  <th class="border-0">Name</th>
+                  <th class="border-0">Num Vaccines</th>
+                  <th class="border-0">Date Dose one</th>
+                  <th class="border-0">Date Dose tow</th>
+                  <th class="border-0">Massage</th>
+                  <th class="border-0 ">status</th>
+                  <th class="border-0 ">Update</th>
+
+              </tr>
+            </thead>
+            <tbody *ngFor="let obj of doctor.userReservation" >
+              <tr>
+                  
+                  <td >
+                    {{obj.fullname}}
+                  </td>
+                  <td>{{obj.numberofvaccines}}</td>
+                  <td>{{obj.actualdatedose1 | date : 'fullDate'}}</td>
+                  <td>{{obj.actualdatedose2 | date : 'fullDate'}}</td>
+                  <td>{{obj.massage}}</td>
+                  <td>{{obj.status}}</td>
+                  <td  >
+                    <button  (click)="openUpdateDailog(obj.userid,obj.reserveid,obj.status,obj.massage,obj.actualdatedose1,obj.actualdatedose2
+                    )">Update</button> 
+                    <!-- <button (click)="openDeleteDailog(obj.userid)">Delete</button>   -->
+           
+                   </td>
+              </tr>
+             
+            </tbody>
+        </table>
+      </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -75,9 +215,15 @@
         <form class="example-form" [formGroup]="updateForm" >
             <mat-form-field class="example-full-width" appearance="fill">
                 <mat-label> status </mat-label>
-                <input type="text" matInput formControlName="status"
-                [(ngModel)]="p_data.status"
-                >
+                <select  matNativeControl required >
+                  <option   value="volvo">Volvo</option>
+                  <option value="saab">Saab</option>
+                  <option value="mercedes">Mercedes</option>
+                  <option value="audi">Audi</option>
+                </select>
+
+                <!-- <input type="text" matInput formControlName="status"
+                [(ngModel)]="p_data.status"> -->
                 
                 <mat-error *ngIf="updateForm.controls['status'].hasError('required')">
                 Name  <strong>required</strong>
