--- a/src/app/admin/user-vaccine-report/user-vaccine-report.component.html
+++ b/src/app/admin/user-vaccine-report/user-vaccine-report.component.html
@@ -1,4 +1,5 @@
-<table class="table">
+<app-sidebar></app-sidebar>
+<table class="table" id="example">
     <thead>
       <tr>
         <th scope="col">Full Name</th>
@@ -12,12 +13,26 @@
     <tbody>
       <tr *ngFor="let obj of vaccineReport.vaccineCertifcate">
         <td>{{obj.fullname}}</td>
-        <td>{{obj.numberofvaccine}}</td>
+        <td>{{obj.numberofvaccines}}</td>
         <td>{{obj.vaccinename}}</td>
         <td>{{obj.centername}}</td>
-        <td>{{obj.firstdatedose}}</td>
-        <td>{{obj.seconddatedose}}</td>
+        <td>{{obj.actualdatedose1}}</td>
+        <td>{{obj.actualdatedose2}}</td>
         
       </tr>
     </tbody>
   </table>
+
+  <script>
+    $(document).ready(function(){
+        $('#example').DataTable({
+            dom:'Bfrtip',
+            buttons:[
+                'copyHtml5',
+                'excelHtml5',
+                'csvHtml5',
+                'pdfHtml5'
+            ]
+        });
+    });
+</script>
