--- a/src/app/admin/sidebar/sidebar.component.html
+++ b/src/app/admin/sidebar/sidebar.component.html
@@ -26,137 +26,81 @@
          </div>
       </div>
       <ul class="nav flex-column pt-3 pt-md-0">
-         <li class="nav-item"><a routerLink="/admin" class="nav-link d-flex align-items-center"><span class="sidebar-icon"><img src="assets/img/light.svg" height="20" width="20" alt="Rich Logo"> </span><span class="mt-1 ms-1 sidebar-text">Admin Dashboard</span></a></li>
-         <li class="nav-item active">
+         <li class="nav-item"><a routerLink="/admin" class="nav-link d-flex align-items-center"><span class="sidebar-icon"><img src="assets/img/admin-panel.png" height="20" width="20" alt="Rich Logo"> </span><span class="mt-1 ms-1 sidebar-text">Admin Dashboard</span></a></li>
+          <li class="nav-item active">
             <a routerLink="/admin" class="nav-link">
-               <span class="sidebar-icon">
-                  <svg class="icon icon-xs me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                     <path d="M2 10a8 8 0 018-8v8h8a8 8 0 11-16 0z"></path>
-                     <path d="M12 2.252A8.014 8.014 0 0117.748 8H12V2.252z"></path>
-                  </svg>
-               </span>
-               <span class="sidebar-text">Dashboard</span>
+               <span class="sidebar-icon"><img src= "assets/img/admin (1).png" height="20" width="20" alt="Rich Logo"> </span><span class="mt-1 ms-1 sidebar-text">Dashboard</span>
+
             </a>
-         </li>
+         </li>  
+
+
          <li class="nav-item">
             <a routerLink="/admin/user" class="nav-link">
-               <span class="sidebar-icon">
-                  <svg class="icon icon-xs me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                     <path fill-rule="evenodd" d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"></path>
-                  </svg>
-               </span>
-               <span class="sidebar-text">Manage users</span>
-            </a>
+               <span class="sidebar-icon"><img src= "assets/img/management.png" height="20" width="20" alt="Rich Logo"> </span><span class="mt-1 ms-1 sidebar-text">Manage Users</span>
+             </a>
          </li>
          <li class="nav-item">
            <a routerLink="/admin/vaccine" class="nav-link">
-              <span class="sidebar-icon">
-                 <svg class="icon icon-xs me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"></path>
-                 </svg>
-              </span>
-              <span class="sidebar-text">Manage vaccines</span>
-           </a>
+            <span class="sidebar-icon"><img src= "assets/img/vaccine.png" height="20" width="20" alt="Rich Logo"> </span><span class="mt-1 ms-1 sidebar-text">Manage Vaccines</span>
+
+            </a>
         </li>
         <li class="nav-item">
-         <a routerLink="/admin/vaccinaiationcenter" class="nav-link">
-            <span class="sidebar-icon">
-               <svg class="icon icon-xs me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"></path>
-               </svg>
-            </span>
-            <span class="sidebar-text">Manage centers</span>
+         <a routerLink="/admin/vaccinaiationcenter" class="nav-link"> 
+            <span class="sidebar-icon"><img src= "assets/img/inventory.png" height="20" width="20" alt="Rich Logo"> </span><span class="mt-1 ms-1 sidebar-text">Manage Centers</span>
+
          </a>
       </li>
       <li class="nav-item">
-       <a routerLink="/admin/managereservation" class="nav-link">
-          <span class="sidebar-icon">
-             <svg class="icon icon-xs me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"></path>
-             </svg>
-          </span>
-          <span class="sidebar-text">Manage reservation</span>
-       </a>
+       <a routerLink="/admin/managereservation" class="nav-link"> 
+         <span class="sidebar-icon"><img src= "assets/img/booking (1).png" height="20" width="20" alt="Rich Logo"> </span><span class="mt-1 ms-1 sidebar-text">Manage Reservation</span>
+
+        </a>
     </li>
     <li class="nav-item">
-     <a routerLink="/admin/testmonial" class="nav-link">
-        <span class="sidebar-icon">
-           <svg class="icon icon-xs me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"></path>
-           </svg>
-        </span>
-        <span class="sidebar-text">Manage testmonial</span>
+     <a routerLink="/admin/testmonial" class="nav-link"> 
+      <span class="sidebar-icon"><img src= "assets/img/testimonial.png" height="20" width="20" alt="Rich Logo"> </span><span class="mt-1 ms-1 sidebar-text">Manage Testmonial</span>
+
+        <span class="sidebar-text"></span>
      </a>
   </li> 
    <li class="nav-item">
    <a routerLink="/admin/manageHome" class="nav-link">
-      <span class="sidebar-icon">
-         <svg class="icon icon-xs me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"></path>
-         </svg>
-      </span>
-      <span class="sidebar-text">Manage home</span>
+      <span class="sidebar-icon"><img src= "assets/img/home.png" height="20" width="20" alt="Rich Logo"> </span><span class="mt-1 ms-1 sidebar-text">Manage Home</span>
+
    </a>
  </li> 
  <li class="nav-item">
    <a routerLink="/admin/doctor" class="nav-link">
-      <span class="sidebar-icon">
-         <svg class="icon icon-xs me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"></path>
-         </svg>
-      </span>
-      <span class="sidebar-text">Manage Doctotr</span>
-   </a>
+      <span class="sidebar-icon"><img src= "assets/img/medical-team (1).png" height="20" width="20" alt="Rich Logo"> </span><span class="mt-1 ms-1 sidebar-text">Manage Doctotr</span>
+
+    </a>
  </li> 
   <li class="nav-item">
    <a routerLink="/admin/manageAbout" class="nav-link">
-      <span class="sidebar-icon">
-         <svg class="icon icon-xs me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"></path>
-         </svg>
-      </span>
-      <span class="sidebar-text">Manage about</span>
+      <span class="sidebar-icon"><img src= "assets/img/men-couple-sitting-on-a-table-talking-about-business (1).png" height="20" width="20" alt="Rich Logo"> </span><span class="mt-1 ms-1 sidebar-text">Manage About</span>
+
    </a>
  </li>     
  <li class="nav-item" (click)="logout()">
    <a routerLink="/admin/manageAbout" class="nav-link">
-      <span class="sidebar-icon">
-         <svg class="icon icon-xs me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"></path>
-         </svg>
-      </span>
-      <span class="sidebar-text">Update Profil</span>
+      <span class="sidebar-icon"><img src= "assets/img/updating.png" height="20" width="20" alt="Rich Logo"> </span><span class="mt-1 ms-1 sidebar-text">Update Profile</span>
+
    </a>
  </li>
  <li class="nav-item" (click)="logout()">
    <a routerLink="/admin/userVaccineReport" class="nav-link">
-      <span class="sidebar-icon">
-         <svg class="icon icon-xs me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"></path>
-         </svg>
-      </span>
-      <span class="sidebar-text">userVaccineReport</span>
-   </a>
+      <span class="sidebar-icon"><img src= "assets/img/test-results.png" height="20" width="20" alt="Rich Logo"> </span><span class="mt-1 ms-1 sidebar-text">User Vaccine Report</span>
+
+    </a>
  </li>
  
+
  <li class="nav-item" (click)="logout()">
    <a routerLink="/admin/manageAbout" class="nav-link">
-      <span class="sidebar-icon">
-         <svg class="icon icon-xs me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"></path>
-         </svg>
-      </span>
-      <span class="sidebar-text">Update Profil</span>
-   </a>
- </li>
- <li class="nav-item" (click)="logout()">
-   <a routerLink="/admin/manageAbout" class="nav-link">
-      <span class="sidebar-icon">
-         <svg class="icon icon-xs me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"></path>
-         </svg>
-      </span>
-      <span class="sidebar-text">Logout</span>
+      <span class="sidebar-icon"><img src= "assets/img/logout.png" height="20" width="20" alt="Rich Logo"> </span><span class="mt-1 ms-1 sidebar-text">Logout</span>
+
    </a>
  </li>     
        </ul>
