--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <app-sidebar></app-sidebar>
-<main class="content">
+<!-- <main class="content">
 <nav class="navbar navbar-top navbar-expand navbar-dashboard navbar-dark ps-0 pe-2 pb-0">
     <div class="container-fluid px-0">
        <div class="d-flex justify-content-between w-100" id="navbarSupportedContent">
@@ -720,4 +720,4 @@
     </div>
  </div>
 </main>
-
+ -->
