--- a/src/app/admin/managevaccines/managevaccines.component.html
+++ b/src/app/admin/managevaccines/managevaccines.component.html
@@ -1,17 +1,22 @@
 <app-sidebar></app-sidebar>
-
+<br>
+ <div class="container-lg" style="margin-right:30px ;"  >
+  <h1 style="font-family: serif; margin-left: 400px;"> Manage Vaccines</h1>
+</div> 
+ 
 <table tyle="display:inline-block ;">
     <div    class="table">
-      <form class="form-inline" style="margin-top: 3%;">
-            <div class="form-group mx-sm-3 mb-2">
+      <form class="form-inline container-lg" style="margin-top: 3%;">
+        <button (click)="openCreateDialog()">Create</button>
+             <div class="form-group mx-sm-3 mb-2">
             <label for="inputText" class="sr-`only">Course Price</label>
             <input  type="text" class="form-control" id="inputText" placeholder="Vaccine Name" [value]="name" (change)="inputValue($event)" (click)="search()" >
             </div>
-            <button type="submit"
-            class="btn btn-success"
+
+            <button style="background-color: rgb(139, 177, 248);" type="submit"
             (click)="search()">Search</button>
             </form>
-      <div class="row header">
+      <div class="container-lg"  style="background-color: rgb(139, 177, 248);">
         <div class="cell">
           Name
         </div>
@@ -27,7 +32,6 @@
           total 
         </div>
    
-        <button (click)="openCreateDialog()">Create</button>
 
       </div>
       
@@ -43,6 +47,7 @@
         <div class="cell" data-title="Location">
             {{obj.vaccineid}}        </div>
            
+<br><br><br><br><br><br>
 
             <button (click)="openUpdateDailog(obj)">update</button>
             <button (click)="openDelteDailog(obj.vaccineid)">delete</button>
