--- a/src/app/admin/sidebar/sidebar.component.html
+++ b/src/app/admin/sidebar/sidebar.component.html
@@ -83,13 +83,13 @@
 
    </a>
  </li>     
- <li class="nav-item" (click)="logout()">
-   <a routerLink="/admin/manageAbout" class="nav-link">
+ <li class="nav-item" >
+   <a routerLink="/admin/update" class="nav-link">
       <span class="sidebar-icon"><img src= "assets/img/updating.png" height="20" width="20" alt="Rich Logo"> </span><span class="mt-1 ms-1 sidebar-text">Update Profile</span>
 
    </a>
  </li>
- <li class="nav-item" (click)="logout()">
+ <li class="nav-item" >
    <a routerLink="/admin/userVaccineReport" class="nav-link">
       <span class="sidebar-icon"><img src= "assets/img/test-results.png" height="20" width="20" alt="Rich Logo"> </span><span class="mt-1 ms-1 sidebar-text">User Vaccine Report</span>
 
