--- a/src/app/admin/testmonial/testmonial.component.html
+++ b/src/app/admin/testmonial/testmonial.component.html
@@ -1,4 +1,10 @@
-<!-- <app-sidebar></app-sidebar> -->
+<app-sidebar></app-sidebar>
+
+<br>
+ <div class="container-lg" style="margin-right:30px ;"  >
+  <h1 style="font-family: serif; margin-left: 400px;">Manage Testmonial </h1>
+</div> 
+<br><br><br>
 <!--<form class="form-inline" style="margin-top: 3%;">
     <div class="form-group mx-sm-3 mb-2">
    <label for="inputText" class="sr- only">Testmonial Name</label>
@@ -6,8 +12,10 @@
    </div> 
     <button type="submit" (click)="search()" class="btn btn-success">Search</button>
    </form>-->
-   <div>
+   <div class="container-lg" style="margin-left:550px ;">
+
  <button style="margin-top: 7%;" (click)="openCreateDialog()">Create New</button>
+ <br><br>
   <table class="table" style="width: 50%;">
      
       <thead>
