--- a/src/app/admin/manage-about/manage-about.component.html
+++ b/src/app/admin/manage-about/manage-about.component.html
@@ -7,9 +7,15 @@
 <div class="container-lg" style="margin-right:130px ;">
 
     <button style=" margin-top: 20%;" (click)="openCreateDialog()">Create New</button>
-     <table class="table" style="width:5%; ">
+    <br><br>
+    
+
+<div class="card border-0 shadow mb-4">
+  <div class="card-body">
+      <div class="table-responsive">
+     <table class=" table table-centered table-nowrap mb-0 rounded" style="width:5%; ">
         
-         <thead>
+         <thead class="thead-light">
            <tr>
              <th scope="col">littleTitle1</th><th scope="col">Title1</th>
              <th scope="col">descriptionTitle1</th><th scope="col">imageTitle1</th>
