--- a/src/app/admin/manage-home/manage-home.component.html
+++ b/src/app/admin/manage-home/manage-home.component.html
@@ -14,9 +14,15 @@
    </form>-->
    <div class="container-lg" style="margin-right:130px ;">
     <button style=" margin-top: 20%;" (click)="openCreateDialog()">Create New</button>
-  <table class="table" style="width:5%; ">
+    <br><br>
+
+<div class=" container-lg card border-0 shadow mb-4">
+  <div class="card-body">
+      <div class="table-responsive">
+  <table  class=" table table-centered table-nowrap mb-0 rounded" style="width:5%; ">
      
-      <thead>
+      <thead class="thead-light"> 
+        
         <tr>
           <th scope="col">imageLogo</th><th scope="col">littleTitle1</th>
           <th scope="col">Title1</th><th scope="col">Title1</th>
